--- a/.github/ISSUE_TEMPLATE/newbugreport.yml
+++ b/.github/ISSUE_TEMPLATE/newbugreport.yml
@@ -15,7 +15,7 @@ body:
   attributes:
     label: Contact Details
     description: How can we get in touch with you if we need more info?
-    placeholder: ex. email@example.com
+  placeholder: ex. email@example.com
     validations:
       required: false
 - type: textarea
@@ -24,7 +24,7 @@ body:
     label: What happened?
     description: Also tell us, what did you expect to happen?
     placeholder: Tell us what you see!
-  value: "A bug happened!"
+    value: "A bug happened!"
   validations:
     required: true
 - type: dropdown
@@ -35,7 +35,7 @@ body:
     options:
       - "1.0.2 (Default)"
       - "1.0.3 (Edge)"
-  default: "1.0.2"
+    default: 0
   validations:
     required: true
 - type: dropdown
@@ -54,7 +54,7 @@ body:
     label: Relevant log output
     description: Please copy and paste any relevant log output. This will
       be automatically formatted into code, so no need for backticks.
-  render: shell
+    render: shell
 - type: checkboxes
   id: terms
   attributes:
@@ -62,7 +62,7 @@ body:
     description: By submitting this issue, you agree to follow our [Code of Conduct](https://example.com)
     options:
       - label: I agree to follow this project's Code of Conduct
-    required: true
+        required: true
 
 
 
