--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -23,8 +23,8 @@ body:
     label: Type of request
     description: Select the type of your request?
     options:
-      -"New Feature"
-      -"Old Feature"
+      - New Feature
+      - Old Feature
     default: 0
   validations:
     required: true
@@ -33,8 +33,8 @@ body:
   attributes:
     label: What is the OS which you want to suggest?
     options:
-      - "Window"
-      - "Android"
+      - Window
+      - Android
     placeholder: Selections
   validations:
     required: true
