Custom feature template3

--- a/.github/ISSUE_TEMPLATE/feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/feature-request.yml
@@ -32,10 +32,10 @@ body:
   id: selection
   attributes:
     label: What is the OS which you want to suggest?
+    multiple: true
     options:
       - Window
       - Android
-    placeholder: Selections
   validations:
     required: true
 - type: textarea
